--- a/.pylintrc
+++ b/.pylintrc
@@ -215,6 +215,8 @@ good-names=i,
            w,
            yr,
            Xr,
+           X_unsqueezed,
+           staged_X,
 
 # Good variable names regexes, separated by a comma. If names match any regex,
 # they will always be accepted
